# forge.luau

./: .clangd  .gitignore  .gitmodules  .luaurc  .nvim.lua  .nvimlspconfig.lua  CMakeLists.txt  CMakePresets.json  README.md  abc  abc.luau  builtin.d.luau  def.luau  global_types.d.luau  nvimlspsetup.lua  some_module.luau  test.luau  test_file  wow.d.luau
auxiliary/: init.luau  multicast.luau  result.luau
etc/: asclass.d.luau  definitions.d.luau  forge.d.luau  plus.d.luau  wowdefinitions.luau
framework/: .clangd  CMakeLists.txt  Task_Scheduler.hpp  common.hpp  fileio.cpp  fileio_library.cpp  filesystem.cpp  filesystem_library.cpp  filesystem_path.cpp  framework.hpp  fs_library.cpp  fs_path.cpp  http.cpp  json.cpp  json_library.cpp  lua.hpp  main.cpp  require.cpp  state_setup.cpp
lsp/: framework.d.luau  luauxt.d.luau
src/: .clangd  CMakeLists.txt  builtin.hpp  cli.cpp  common.hpp  compile_time.hpp  comptime.hpp  consoleio.cpp  export.hpp  file.cpp  file_writer.cpp  fileio.cpp  filesystem.cpp  filewriter.cpp  fwriter.cpp  io.cpp  json.cpp  main.cpp  method_name.hpp  named_atom.hpp  path.cpp  path_type.cpp  process.cpp  require.cpp  state.cpp  state_setup.cpp  type_defs.hpp  userdata.hpp  writer.cpp
src/executable/: .clangd  CMakeLists.txt  NamedAtom.hpp  cli.cpp  common.hpp  filesystem_library.cpp  filesystem_types.cpp  fslib.cpp  fstypes.cpp  http_library.cpp  http_types.cpp  httplib.cpp  io_library.cpp  io_types.cpp  iolib.cpp  iotypes.cpp  json_library.cpp  jsonlib.cpp  named_atom.hpp  oslib.cpp  process_library.cpp  process_types.cpp  state.cpp  type_defs.hpp
src/executable/fs/: export.hpp  library.cpp  types.cpp
src/executable/http/: export.hpp  library.cpp  types.cpp
src/executable/io/: export.hpp  library.cpp  types.cpp
src/executable/json/: export.hpp  library.cpp
src/executable/lib_impl/: filesystem.cpp  io.cpp  process.cpp
src/executable/proc/: export.hpp  library.cpp
src/executable/type_impl/: .clangd  filewriter.cpp  path.cpp  reader.cpp  writer.cpp
src/executable/util/: .clangd  ArgsWrapper.hpp  Interface.hpp  basic_type.hpp  comptime.hpp  file_utility.hpp  json_utility.hpp  lua.hpp  property_table.hpp  scope_defer.hpp  type_utility.hpp
src/lib/: consoleio.cpp  fileio.cpp  filesystem.cpp  json.cpp  process.cpp
src/lib/fs/: export.hpp  library.cpp  path.cpp
src/lib/http/: client.cpp  export.hpp  library.cpp  response.cpp
src/lib/io/: export.hpp  library.cpp  types.cpp
src/lib/json/: export.hpp  library.cpp
src/lib/proc/: export.hpp  library.cpp
src/lib_impl/: consoleio.cpp  fileio.cpp  filesystem.cpp  garbage.cpp  io.cpp  process.cpp  require.cpp
src/lua/: json.hpp  lua.hpp  typeutility.hpp
src/luau/: filesystem.luau  list.luau  result.luau  stack.luau
src/type/: .clangd  filewriter.cpp  method.hpp  path.cpp
src/type_impl/: .clangd  file_writer.cpp  filewriter.cpp  method.hpp  path.cpp  result.cpp  writer.cpp
src/util/: .clangd  comptime.hpp  lua.hpp
src/utility/: .clangd  compile_time.hpp  library_config.hpp  luau.hpp  scope_defer.hpp
test/: abc.luau  def.luau  init.luau  module.luau  test.luau
